# docs/swagger.json
@@ -18,6 +18,30 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "ユーザー新規登録API",
+                "parameters": [
+                    {
+                        "description": "User Create Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.LoginSuccessResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/registration": {
             "post": {
                 "description": "ユーザー新規登録API",
@@ -79,6 +103,36 @@
         }
     },
     "definitions": {
+        "controllers.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "info@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password2021"
+                }
+            }
+        },
+        "controllers.LoginSuccessResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string",
+                    "example": "$$t$hisistoken"
+                },
+                "expiedAt": {
+                    "type": "string",
+                    "example": "2021-01-10T15:42:36+09:00"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "login_success"
+                }
+            }
+        },
         "controllers.UserCreateRequest": {
             "type": "object",
             "properties": {
